<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ContactDetailsActivity">

    <FrameLayout
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/personNameTextViewSingleItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userPicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

    </FrameLayout>

    <TextView
        android:id="@+id/personNameTextViewSingleItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personNameTextViewSingleItem" />

    <ImageView
        android:id="@+id/iconMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/phoneTextView"
        app:layout_constraintEnd_toEndOf="@+id/phoneTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iconCall"
        app:layout_constraintStart_toStartOf="@+id/phoneTextView"
        app:layout_constraintTop_toTopOf="@+id/phoneTextView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_message_24" />

    <ImageView
        android:id="@+id/iconCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/phoneTextView"
        app:layout_constraintEnd_toEndOf="@+id/phoneTextView"
        app:layout_constraintStart_toEndOf="@+id/iconMessage"
        app:layout_constraintTop_toTopOf="@+id/phoneTextView"
        app:srcCompat="@drawable/ic_baseline_phone_24" />

    <TextView
        android:id="@+id/emailAddressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

    <ImageView
        android:id="@+id/iconEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/emailAddressTextView"
        app:layout_constraintEnd_toEndOf="@+id/emailAddressTextView"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="@+id/emailAddressTextView"
        app:layout_constraintTop_toTopOf="@+id/emailAddressTextView"
        app:layout_constraintVertical_bias="0.409"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:text="@string/delete"
        android:textColor="#03DAC6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTextView"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit"
        android:textColor="#03DAC6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTextView"
        app:layout_constraintVertical_bias="0.941" />





</androidx.constraintlayout.widget.ConstraintLayout>