...
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />



    <EditText
        android:id="@+id/textEnterPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Please enter your PIN"
        android:inputType="numberPassword"
...
